@@ -1,6 +1,10 @@
 ..
-   Copyright 2020-2022 David Robillard <d@drobilla.net>
+   Copyright 2020-2023 David Robillard <d@drobilla.net>
    SPDX-License-Identifier: ISC
+
+####
+Suil
+####
 
 Suil is a library for loading and wrapping LV2 plugin UIs.
 
@@ -12,3 +16,8 @@ a Gtk host can embed a Qt UI without linking against Qt at compile time.
 
 Suil also handles the embedding of native platform UIs (which are recommended) in common toolkits,
 for example embedding an X11 UI in a Gtk host.
+
+.. toctree::
+
+   overview
+   api/suil
