@@ -1,4 +1,4 @@
-# Copyright 2021-2022 David Robillard <d@drobilla.net>
+# Copyright 2021-2023 David Robillard <d@drobilla.net>
 # SPDX-License-Identifier: 0BSD OR ISC
 
 option('cocoa', type: 'feature', value: 'auto', yield: true,
@@ -13,8 +13,14 @@ option('gtk2', type: 'feature', value: 'auto', yield: true,
 option('gtk3', type: 'feature', value: 'auto', yield: true,
        description : 'Build Gtk3 wrappers')
 
+option('html', type: 'feature', value: 'auto', yield: true,
+       description: 'Build paginated HTML documentation')
+
 option('qt5', type: 'feature', value: 'auto', yield: true,
        description : 'Build Qt5 wrappers')
+
+option('singlehtml', type: 'feature', value: 'auto', yield: true,
+       description: 'Build single-page HTML documentation')
 
 option('tests', type: 'feature', value: 'auto', yield: true,
        description: 'Build tests')
